更新頁面標題並新增應用程式 URL 設定
在 `Modeeels.razor` 檔案中，將 `<PageTitle>` 標籤的內容更改為「機型檢驗標準數值」，並移除了關於可新增、編輯、複製的描述文字。

在 `launchSettings.json` 檔案中，新增 `applicationUrl` 設定，指定應用程式的 URL 為 `http://192.168.0.112:7010`。

--- a/VW_DMPP/Properties/launchSettings.json
+++ b/VW_DMPP/Properties/launchSettings.json
@@ -29,6 +29,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "applicationUrl": "http://192.168.0.112:7010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
