--- a/VW_DMPP/VW_DMPP.csproj
+++ b/VW_DMPP/VW_DMPP.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="Data\YyscData.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.5.0" />
+  </ItemGroup>
+
 </Project>
